# qtbatterytest

./: CMakeLists.txt  README.md  batteryservice.cpp  batteryservice.h  controller.cpp  controller.h  main.cpp  scanner.cpp  watchconnection.cpp  watchconnection.h
